namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing
  labels:
    mesh: my-mesh
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
