virtual-service.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: java-demo-vs
  namespace: testing
spec:
  awsName: java-demo.testing.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: java-demo-vr
